# uncertaincoco

./: README.md
documentation/: Doxyfile  mainpage.h
documentation/html/: AbstractPreselecter_8h.html  AbstractPreselecter_8h__dep__incl.map  AbstractPreselecter_8h__dep__incl.md5  AbstractPreselecter_8h__incl.map  AbstractPreselecter_8h__incl.md5  AbstractPreselecter_8h_source.html  AbstractSAPEO_8h.html  AbstractSAPEO_8h__dep__incl.map  AbstractSAPEO_8h__dep__incl.md5  AbstractSAPEO_8h__incl.map  AbstractSAPEO_8h__incl.md5  AbstractSAPEO_8h_source.html  Archive_8cpp.html  Archive_8h.html  Archive_8h.js  Archive_8h__dep__incl.map  Archive_8h__dep__incl.md5  Archive_8h__incl.map  Archive_8h__incl.md5  Archive_8h_source.html  CMA__mod_8h.html  CMA__mod_8h__incl.map  CMA__mod_8h__incl.md5  CMA__mod_8h_source.html  CMakeLists_8txt.html  COCOfunc_8h.html  COCOfunc_8h.js  COCOfunc_8h__dep__incl.map  COCOfunc_8h__dep__incl.md5  COCOfunc_8h__incl.map  COCOfunc_8h__incl.md5  COCOfunc_8h_source.html  COCOfunc__m_8h.html  COCOfunc__m_8h__dep__incl.map  COCOfunc__m_8h__dep__incl.md5  COCOfunc__m_8h__incl.map  COCOfunc__m_8h__incl.md5  COCOfunc__m_8h_source.html  COCOfunc__s_8h.html  COCOfunc__s_8h__dep__incl.map  (+944 more)
documentation/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_17.js  all_18.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_a.js  classes_b.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  enums_0.js  enums_1.js  enums_4.js  enumvalues_0.js  enumvalues_1.js  (+69 more)
documentation/latex/: AbstractPreselecter_8h.tex  AbstractPreselecter_8h__dep__incl.md5  AbstractPreselecter_8h__incl.md5  AbstractSAPEO_8h.tex  AbstractSAPEO_8h__dep__incl.md5  AbstractSAPEO_8h__incl.md5  Archive_8cpp.tex  Archive_8h.tex  Archive_8h__dep__incl.md5  Archive_8h__incl.md5  CMA__mod_8h.tex  CMA__mod_8h__incl.md5  CMakeLists_8txt.tex  COCOfunc_8h.tex  COCOfunc_8h__dep__incl.md5  COCOfunc_8h__incl.md5  COCOfunc__m_8h.tex  COCOfunc__m_8h__dep__incl.md5  COCOfunc__m_8h__incl.md5  COCOfunc__s_8h.tex  COCOfunc__s_8h__dep__incl.md5  COCOfunc__s_8h__incl.md5  COCOfunction_8h.tex  COCOfunction_8h__incl.md5  CocoOptimiser_8h.tex  CocoOptimiser_8h__dep__incl.md5  CocoOptimiser_8h__incl.md5  EGO_8cpp.tex  EGO_8cpp__incl.md5  EGO_8h.tex  EGO_8h__dep__incl.md5  EGO_8h__incl.md5  ExampleExperiment_8cpp.tex  ExampleExperiment_8cpp__incl.md5  ExpectedImprovement__m_8h.tex  ExpectedImprovement__m_8h__dep__incl.md5  ExpectedImprovement__m_8h__incl.md5  ExpectedImprovement__s_8h.tex  ExpectedImprovement__s_8h__dep__incl.md5  ExpectedImprovement__s_8h__incl.md5  (+290 more)
src/: CMakeLists.txt  ExampleExperiment.cpp
src/COCOinterface/: COCOfunc.h  Suite.cpp  Suite.h  coco.c  coco.h
src/Tests/COCOinterface/: COCOfuncTest.cpp  SuiteTest.cpp
src/Tests/algos/: AbstractPreselecter_Test.cpp  EGO_Test.cpp  RS_Test.cpp  SAPEOTest.cpp  presel_Test.cpp
src/Tests/functions/: COCOfunc_mTest.cpp  COCOfunc_sTest.cpp  EI_m_Test.cpp  EI_s_Test.cpp  Kriging_pred_Test.cpp  Kriging_pred_m_Test.cpp
src/Tests/uncertainty/: UF_s_Test.cpp  UncertainTester.cpp
src/Tests/utils/: KrigingTest.cpp  archiveTest.cpp  ihsTest.cpp
src/algos/: CocoOptimiser.h
src/algos/EGO/: EGO.cpp  EGO.h
src/algos/SAPEO/: AbstractSAPEO.h  SAPEO.cpp  SAPEO.h  SAPEOCMA.h  SAPEOMOCMA.h  SAPEOSMS.h
src/algos/SAPEOreader/: SAPEOreader.cpp  SAPEOreader.h
src/algos/preselect/: AbstractPreselecter.h  CMA_mod.h  MOCMA_mod.h  SMS-EMOA_mod.h  preselect.cpp  preselect.h
src/algos/random/: RandomSearch.cpp  RandomSearch.h
src/functions/: COCOfunc_m.h  COCOfunc_s.h  UncertainFunc.h  UncertainFunc_m.h  UncertainFunc_s.h
src/uncertainty/: SafeComparator.h  TrueFitnessExtractor.h  UncertainCMAIndividual.h  UncertainEvaluator.h  UncertainIndividual.h  UncertainSelect.h  UncertainSort.h
src/utils/: Archive.cpp  Archive.h  Kriging.cpp  Kriging.h  ihs.cpp  ihs.h
